[package]
name = "skm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.14", features = ["derive"] }
colored = "2.0.0"
lazy_static = "1.4.0"
thiserror = "1.0.32"
